--- a/env/.env
+++ b/env/.env
@@ -1,6 +1,6 @@
-//Definimos las variables de entorno para la conexion a la BD heroku
+//Definimos las variables de entorno para la conexion a la BD 
 
-DB_HOST = 50.6.138.161
-DB_USER = mifamili_usu1
-DB_PASS = r7ma7GB2iez9CcZ
-DB_DATABASE = mifamili_2024
+DB_HOST = localhost
+DB_USER = usr01
+DB_PASS = V46ALGyDsbi_Qzmc
+DB_DATABASE = 2024copas
